merged client into server